# projet_detection_anomalies

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  data_utils.py  eval_utils.py  pyproject.toml  requirements.txt
notebooks/: 01_exploratory_analysis.ipynb  02_deep_dive_analysis.ipynb  03_advanced_transforms_analysis.ipynb  04_reverse_engineering_transforms.ipynb
reports/: 01_EDA_REPORT.md  02_DEEP_DIVE_REPORT.md  04_REVERSE_ENGINEERING_RESULTS.md  ANOMALY_REVERSE_ENGINEERING_REPORT.md  DEEP_DEEP_DIVE_REPORT.md  PLAN_IMPLEMENTATION.md
src/: data_utils.py  feature_extraction.py
tests/: test_data_utils.py  test_eval_utils.py
